adding metrics